<resources>
    <string name="title_toolbar_signed_accounts">Protected Accounts</string>
    <string name="title_toolbar_transaction_details">Transaction Details</string>
    <string name="title_toolbar_dashboard">Home</string>
    <string name="title_toolbar_transactions">Transactions</string>
    <string name="title_toolbar_operation_details">Operation Details</string>
    <string name="title_toolbar_settings">Settings</string>
    <string name="title_toolbar_license">Licenses</string>
    <string name="title_toolbar_import_xdr">Add Transaction XDR</string>
    <string name="title_toolbar_spam_protection">Unsigned Transactions</string>
    <string name="text_btn_cancel">Cancel</string>
    <string name="text_btn_close">Close</string>
    <string name="text_btn_ok">OK</string>
    <string name="text_btn_confirm">Confirm</string>
    <string name="text_btn_yes">Yes</string>
    <string name="text_btn_deny">Deny</string>
    <string name="text_btn_log_out">Log Out</string>
    <string name="text_btn_next">Next</string>
    <string name="text_btn_clip_to_board">Copy</string>
    <string name="text_btn_skip">Skip</string>
    <string name="text_btn_done">Done</string>
    <string name="text_btn_copy_key">Copy Key</string>
    <string name="text_btn_import_xdr_next">Next</string>
    <string name="text_btn_suggest_rate_us">Love it</string>
    <string name="text_btn_cancel_suggestion_rate_us">Not for me</string>
    <string name="text_btn_rate_us">Rate Us 5 stars</string>
    <string name="text_btn_rate_later">Remind later</string>
    <string name="text_btn_rate_never">Don\'t ask again</string>
    <string name="text_btn_continue">Continue</string>
    <string name="text_btn_change_pin">Change PIN</string>
    <string name="text_btn_add_account">Add Account</string>
    <string name="text_btn_remove_all">Remove All</string>
    <string name="text_btn_remove_invalid">Remove Invalid</string>
    <string name="text_tv_start_screen_title">Multiply your security</string>
    <string name="text_btn_start_screen_create_account">Create Account</string>
    <string name="text_btn_start_screen_restore_account">Recover Account</string>
    <string name="text_btn_start_screen_signer_card">Use Signer Card</string>
    <string name="text_tc_start_screen_or">or</string>
    <string name="text_tv_start_screen_help">First time user? See our <a href="https://lobstr.co/vault/">Help section</a></string>
    <string name="text_tv_start_screen_terms_and_privacy">By registering you agree to our <a href="https://lobstr.co/terms/">Terms of Service</a> and <a href="https://lobstr.co/privacy/">Privacy Policy</a></string>
    <string name="text_tv_recovery_phrase_title">Recover Account</string>
    <string name="text_tv_recovery_phrase_description">Enter the 12 or 24 word recovery phrase you were given when you
        created your Vault account.
    </string>
    <string name="text_tv_backup_title">Backup Your Account</string>
    <string name="text_tv_backup_description">You will be shown a 12 word recovery phrase. It will allow you to recover access to your account in case your phone is lost or stolen.\n\n
        If you lose your Recovery Phrase, you may lose the control over your protected Stellar account and funds.
    </string>
    <string name="text_btn_backup_understand">I Understand</string>
    <string name="text_tv_mnemonics_title">Recovery Phrase</string>
    <string name="text_tv_mnemonics_description">Recovery phrase can help you to recover access to your account in case
        your phone is lost or stolen.
    </string>
    <string name="text_tv_mnemonics_instruction">Write down these %d words and keep them secure. Don\'t email them or
        screenshot them.
    </string>
    <string name="text_tv_mnemonics_confirmation">You will need to confirm recovery phrase on the next screen</string>
    <string name="text_tv_confirm_mnemonics_title">Verify Recovery Phrase</string>
    <string name="text_tv_confirm_mnemonics_description">Tap the words in correct order.</string>
    <string name="text_btn_clear">Clear</string>
    <string name="text_tv_biometric_set_up_title">Protect your account</string>
    <string name="text_tv_biometric_set_up_description">Use biometric login instead of your PIN to access your
        account.
    </string>
    <string name="text_tv_biometric_set_up_later">You can do it later in Settings</string>
    <string name="text_btn_biometric_enable">Enable Biometric Login</string>
    <string name="text_tv_signer_info_install_lobstr_app_title">Install LOBSTR wallet</string>
    <string name="text_tv_signer_info_install_lobstr_app_description">Vault signer app works best with LOBSTR wallet. Install LOBSTR to enable multisig and use advanced features.</string>
    <string name="text_btn_signer_info_download_lobstr_app">Download LOBSTR</string>
    <string name="text_tv_signer_info_use_lobstr_app_title">Use Vault with LOBSTR on this device</string>
    <string name="text_tv_signer_info_use_lobstr_app_description">Open LOBSTR to add this device as a signer for your Stellar account and use advanced multisignature capabilities.</string>
    <string name="text_btn_signer_info_open_lobstr_app">Open LOBSTR Wallet</string>
    <string name="text_tv_signer_info_use_other_service_title">Use Vault with a different service or LOBSTR on another device</string>
    <string name="text_tv_signer_info_use_other_service_description">Copy the public key or scan the QR code to add Vault signer and enable multisig on another device.</string>
    <string name="text_btn_show_qr">Show QR</string>
    <string name="text_tv_vault_auth_signer_card_title">Your Signer Card is ready</string>
    <string name="text_tv_vault_auth_signer_mnemonics_description">Your signer account is configured and ready for use. Sign In to use this signer account.</string>
    <string name="text_tv_vault_auth_signer_card_description">Your Signer Card is configured and ready for use. Scan the card to sign in to your account.</string>
    <string name="text_btn_vault_auth_signer_card">Sign In with Signer Card</string>
    <string name="text_btn_vault_auth_mnemonics">Sign In</string>
    <string name="text_title_create_pin">Create PIN</string>
    <string name="text_title_confirm_pin">Confirm PIN</string>
    <string name="text_title_create_new_pin">Create New PIN</string>
    <string name="text_title_confirm_new_pin">Confirm New PIN</string>
    <string name="text_title_enter_old_pin">Enter Old PIN</string>
    <string name="text_success_change_pin">PIN changed</string>
    <string name="text_pin_menu_need_help">Need Help?</string>
    <string name="text_dashboard_transactions">Transactions to Sign</string>
    <string name="text_dashboard_show_list">View Transactions List</string>
    <string name="text_title_dashboard_public_key">Vault Public Key</string>
    <string name="text_title_dashboard_signers">Signer For</string>
    <string name="text_tv_dashboard_signers_empty_state_title">No Protected Accounts</string>
    <string name="text_tv_dashboard_signers_empty_state_description">Add the Stellar account you want to protect</string>
    <string name="text_empty_state_transactions_list">No transactions to sign</string>
    <string name="text_tv_sequence_number_invalid">Invalid</string>
    <string name="text_tv_transactions_clear">Clear</string>
    <string name="title_settings_wallet">Account</string>
    <string name="title_settings_security">Security</string>
    <string name="title_settings_help">Help</string>
    <string name="title_settings_other">Other</string>
    <string name="text_settings_public_key">Vault Public Key</string>
    <string name="text_settings_signer">Signer for %d account</string>
    <string name="text_settings_signers">Signer for %d accounts</string>
    <string name="text_settings_mnemonic_code">Recovery Phrase</string>
    <string name="text_settings_change_pin">Change PIN</string>
    <string name="text_settings_biometric_login">Biometric Login</string>
    <string name="text_settings_spam_protection">Allow Unsigned Transactions</string>
    <string name="text_settings_notifications">Notifications</string>
    <string name="text_settings_signer_card_info">Learn about the Signer Card</string>
    <string name="text_settings_version">Version</string>
    <string name="text_settings_help">Help Center</string>
    <string name="text_settings_license">Licenses</string>
    <string name="text_settings_rate_us">Rate Us</string>
    <string name="text_settings_contact_support">Contact Support</string>
    <string name="text_settings_log_out">Log Out</string>
    <string name="text_settings_show">Show</string>
    <string name="text_all_rights_reserved">©%s. All rights reserved</string>
    <string name="text_settings_transaction_confirmation">Transaction Confirmations</string>
    <string name="text_config_no">No</string>
    <string name="text_config_yes">Yes</string>
    <string name="text_config_confirm_transactions_title">Confirm Transactions</string>
    <string name="text_config_confirm_transactions_description">Show additional confirmation alert before signing transaction requests to avoid mistakes.</string>
    <string name="text_config_spam_protection_description">Select whether you want to receive transaction requests that don\'t contain any valid signatures from the protected account or other signers. Choose ‘No’ to protect your account from spam transactions.</string>
    <string name="text_signed_account_empty_state">No signed accounts</string>
    <string name="text_btn_clear_nick_name">Clear Account Nickname</string>
    <string name="text_btn_copy_public_key">Copy Public Key</string>
    <string name="text_btn_open_explorer">Open Network Explorer</string>
    <string name="text_tv_set_account_name">Set Account Nickname</string>
    <string name="text_tv_change_account_name">Change Account Nickname</string>
    <string name="text_tv_account_name_subtitle">Choose a short name for protected account</string>
    <string name="hint_account_nickname">Enter account nickname</string>
    <string name="text_tv_change_account_name_restriction">Limited to 30 symbols</string>
    <string name="text_btn_save">Save</string>
    <string name="text_operation_name_payment">Payment</string>
    <string name="text_operation_name_create_account">Create Account</string>
    <string name="text_operation_name_path_payment_strict_send">Path Payment Strict Send</string>
    <string name="text_operation_name_path_payment_strict_receive">Path Payment Strict Receive</string>
    <string name="text_operation_name_sell_offer">Sell Offer</string>
    <string name="text_operation_name_cancel_offer">Cancel Offer</string>
    <string name="text_operation_name_manage_buy_offer">Buy Offer</string>
    <string name="text_operation_name_create_passive_sell_offer">Create Passive Offer</string>
    <string name="text_operation_name_set_options">Set Options</string>
    <string name="text_operation_name_change_trust">Change Trust</string>
    <string name="text_operation_name_allow_trust">Allow Trust</string>
    <string name="text_operation_name_account_merge">Account Merge</string>
    <string name="text_operation_name_inflation">Inflation</string>
    <string name="text_operation_name_manage_data">Manage Data</string>
    <string name="text_operation_name_bump_sequence">Bump Sequence</string>
    <string name="text_operation_name_several_operation">%s Operations</string>
    <string name="text_operation_name_begin_sponsoring_future_reserves">Begin Sponsoring Future Reserves</string>
    <string name="text_operation_name_end_sponsoring_future_reserves">End Sponsoring Future Reserves</string>
    <string name="text_action_open_help_center">Open Help Center</string>
    <string name="text_menu_copy_signed_xdr">Copy Signed XDR</string>
    <string name="text_menu_view_transaction_details">View Transaction Details</string>
</resources>