<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="32dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:alpha="0.6"
            android:text="@string/text_tv_account_name_subtitle"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/color_071c33"
            android:textSize="13sp" />

    <com.lobstr.stellar.vault.presentation.util.SearchEditText
            android:id="@+id/edtAccountName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_input_edit_text"
            android:drawablePadding="10dp"
            android:gravity="top"
            android:hint="@string/hint_account_nickname"
            android:imeOptions="actionDone"
            android:inputType="textCapWords|textCapSentences"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="16dp"
            android:textColorHint="@color/color_4d000000"
            android:textSize="15sp"
            app:cleanSearchImgColor="@color/color_757575" />

    <TextView
            android:id="@+id/tvRestriction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/text_tv_change_account_name_restriction"
            android:textColor="@color/color_4a4a4a"
            android:textSize="13sp" />

    <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/selector_default_button_with_round"
            android:text="@string/text_btn_save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    <Button
            android:id="@+id/btnCancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="18dp"
            android:text="@string/text_btn_cancel"
            android:textAllCaps="false"
            android:textColor="@color/color_d9534f"
            android:textSize="14sp" />

</LinearLayout>