<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <Button
            android:id="@+id/btnOpenExplorer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_primary"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="start"
            android:drawablePadding="30dp"
            android:textAllCaps="false"
            android:text="@string/text_btn_open_explorer"
            app:drawableStartCompat="@drawable/ic_open_in_new_purple"/>

    <Button
            android:id="@+id/btnCopyPublicKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_primary"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="start"
            android:drawablePadding="32dp"
            android:textAllCaps="false"
            android:text="@string/text_btn_copy_public_key"
            app:drawableStartCompat="@drawable/ic_content_copy_purple"/>

    <Button
            android:id="@+id/btnSetNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_primary"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="start"
            android:drawablePadding="24dp"
            android:textAllCaps="false"
            android:text="@string/text_tv_set_account_name"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_edit_note_purple"/>

    <Button
            android:id="@+id/btnClearNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_d9534f"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textSize="16sp"
            android:paddingStart="14dp"
            android:paddingEnd="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="start"
            android:drawablePadding="26dp"
            android:textAllCaps="false"
            android:text="@string/text_btn_clear_nick_name"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_delete_red"/>
</LinearLayout>

